fix: correct typo in sport page

--- a/sport.html
+++ b/sport.html
@@ -17,8 +17,8 @@
         <nav class="sidebar ">
             <div class="nav-item mt-3">
                 <a><img src="./images/icons/bubbletea-color.png" alt="" width="80px" height="80px"></a>
-                <a href="index.php" class="nav-home mt-3 "></a>
-                <a href="diet.php" class="nav-record mt-3 "></a>
+                <a href="index.html" class="nav-home mt-3 "></a>
+                <a href="diet.html" class="nav-record mt-3 "></a>
                 <a href="sport.html" class="nav-run mt-3 active"></a>
             </div>
             <div class="nav-date d-flex flex-column justify-content-end align-items-center my-auto">
@@ -30,8 +30,8 @@
         <!-- 手機底部導覽 -->
         <nav class="bottom-nav d-flex flex-row justify-content-around align-items-center d-lg-none">
             <div class="bottom-nav-item flex-row">
-                <a href="index.php" class="nav-home"></a>
-                <a href="diet.php" class="nav-record "></a>
+                <a href="index.html" class="nav-home"></a>
+                <a href="diet.html" class="nav-record "></a>
                 <a href="sport.html" class="nav-run active"></a>
             </div>
             <div class="nav-date d-none">
