--- a/sport.html
+++ b/sport.html
@@ -147,16 +147,16 @@
                                 <div class="col-12">
                                     <div class=" bg-07 p-3 rounded-3">
                                         <label for="" class="form-label">運動項目</label>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="sportRadios"
-                                                id="weightRadios" value="weightoption" checked>
+                                        <div class="form-check" id="weightGroup">
+                                            <input class="form-check-input" type="radio" name="sportType"
+                                                id="weightRadios" value="weight" checked>
                                             <label class="form-check-label" for="exampleRadios1">
                                                 重訓
                                             </label>
                                         </div>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="sportRadios"
-                                                id="cardioRadios" value="cardiooption">
+                                        <div class="form-check" id="cardioGroup">
+                                            <input class="form-check-input" type="radio" name="sportType"
+                                                id="cardioRadios" value="cardio">
                                             <label class="form-check-label" for="cardioRadios">
                                                 有氧
                                             </label>
@@ -169,7 +169,7 @@
                                         <div class="d-flex align-items-baseline">
                                             <input type="number" class="form-control hour" placeholder="時" max="23"
                                                 min="0">
-                                            <label for="" class="form-label">：</label>
+                                            <label for="" class="form-label">　</label>
                                             <input type="number" class="form-control min" placeholder="分" max="59"
                                                 min="0">
                                         </div>
@@ -189,10 +189,13 @@
                                                     <div class="d-flex align-items-center gap-2">
                                                         <input type="text" class="form-control items"
                                                             placeholder="ex.二頭肌.跑步">
-                                                        <input type="text" class="form-control set"
+                                                        <input type="text" class="form-control sets"
                                                             placeholder="10下/1組 ">
                                                         <button class="btn sport-item-remove"></button>
                                                     </div>
+                                            </div>
+                                            <div class="text-center">
+                                                    <button class="btn sport-item-add" id="sport-item-add"></button>
                                                 </div>
                                         </div>
                                     </div>
@@ -217,7 +220,7 @@
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/calender.js"></script>
     <script src="./js/sport.js"></script>
-    <!-- <script src="./js/page.js"></script> -->
+    <script src="./js/page2.js"></script>
     <script src="https://kit.fontawesome.com/513e02c78d.js" crossorigin="anonymous"></script>
 
 </body>
