--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 
 
-        fetch("/Fitness/js/content.json")
+        fetch("./js/content.json")
             .then(res => res.json())
             .then(data => {
                 const randomIndex = Math.floor(Math.random() * data.length);
